--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram1 Bot</title>
+    <title>Instagram Bot</title>
     <style>
       #logs {
         border: 1px solid #ccc;
