--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <h1>Select a Social Media Platform</h1>
     <div class="card" id="instagramCard">Instagram</div>
-    <div class="card" id="whatsappCard">WhasApp</div>
+    <div class="card" id="whatsappCard">WhatsApp</div>
     <!-- Add more cards as needed -->
 
     <script>
