--- a/index.html
+++ b/index.html
@@ -3,88 +3,27 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Bot</title>
+    <title>Social Media</title>
     <style>
-        #logs {
+        .card {
             border: 1px solid #ccc;
-            padding: 10px;
-            height: 300px;
-            overflow-y: auto;
+            padding: 20px;
+            margin: 10px;
+            display: inline-block;
+            cursor: pointer;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <h1>Instagram Bot</h1>
-    <form id="loginForm">
-        <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required />
-        </div>
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required />
-        </div>
-        <button type="submit" id="submitBtn">Start Bot</button>
-    </form>
-    <input type="text" id="two-factor-code" placeholder="Enter 2FA Code" style="display: none;" />
-    <button id="submit-2fa-code" style="display: none;">Submit 2FA Code</button>
-
-    <div id="result"></div>
-    <div id="logs"></div>
+    <h1>Select a Social Media Platform</h1>
+    <div class="card" id="instagramCard">Instagram</div>
+    <div class="card" id="whatsappCard">WhatsApp</div>
+    <!-- Add more cards as needed -->
 
     <script>
-        const { ipcRenderer } = require('electron');
-
-        document.getElementById("loginForm").addEventListener("submit", async (e) => {
-            e.preventDefault(); // Prevent the form from submitting the traditional way
-
-            const submitButton = document.getElementById("submitBtn");
-            submitButton.disabled = true; // Disable the button to prevent multiple submissions
-
-            const username = document.getElementById("username").value;
-            const password = document.getElementById("password").value;
-
-            try {
-                const result = await ipcRenderer.invoke("start-bot", {
-                    username,
-                    password,
-                });
-
-                if (result.success) {
-                    document.getElementById("result").innerText = "Bot process completed.";
-                    document.getElementById("loginForm").reset(); // Clear the form fields
-                } else if (result.error && result.error.includes("2FA code required")) {
-                    // Show the 2FA input fields
-                    document.getElementById('two-factor-code').style.display = 'block';
-                    document.getElementById('submit-2fa-code').style.display = 'block';
-                } else {
-                    document.getElementById("result").innerText = "Error: " + result.error;
-                }
-            } catch (error) {
-                document.getElementById("result").innerText = "Unexpected error: " + error.message;
-            }
-
-            submitButton.disabled = false; // Re-enable the button after the process is complete
-        });
-
-        ipcRenderer.on("update-logs", (event, log) => {
-            const logsDiv = document.getElementById("logs");
-            const logElement = document.createElement("p");
-            logElement.innerText = log;
-            logsDiv.appendChild(logElement);
-            logsDiv.scrollTop = logsDiv.scrollHeight; // Auto-scroll to the bottom
-        });
-
-        ipcRenderer.on('show-2fa-input', () => {
-            document.getElementById('two-factor-code').style.display = 'block';
-            document.getElementById('submit-2fa-code').style.display = 'block';
-        });
-
-        document.getElementById('submit-2fa-code').addEventListener('click', () => {
-            const code = document.getElementById('two-factor-code').value;
-            ipcRenderer.send('submit-2fa-code', code);
-            document.getElementById('two-factor-code').style.display = 'none';
-            document.getElementById('submit-2fa-code').style.display = 'none';
+        document.getElementById("instagramCard").addEventListener("click", () => {
+            window.location.href = "instagram.html";
         });
     </script>
 </body>
